--- a/0.4_New_note_diagram.md
+++ b/0.4_New_note_diagram.md
@@ -3,26 +3,31 @@ sequenceDiagram
   participant browser
   participant server
 
-  browser->>server: GET https://studies.cs.helsinki.fi/exampleapp/notes
+  browser->>server: POST https://studies.cs.helsinki.fi/exampleapp/new_note
   activate server
-  server-->>browser: HTML document
+  server-->>browser: 302 Redirect at location: /exampleapp/notes
   deactivate server
 
-  browser->>server: GET https://studies.cs.helsinki.fi/exampleapp/main.css
+  browser->>server: GET https://studies.cs.helsinki.fi/exampleapp/notes/
   activate server
-  server-->>browser: the CSS file
+  server-->>browser: the html file
   deactivate server
 
-  browser->>server: GET https://studies.cs.helsinki.fi/exampleapp/main.js
+  browser->>server: GET https://studies.cs.helsinki.fi/exampleapp/main.css/
   activate server
-  server-->>browser: the JavaScript file
+  server-->>browser: the css file main.css
+  deactivate server
+
+  browser->>server: GET https://studies.cs.helsinki.fi/exampleapp/main.js/
+  activate server
+  server-->>browser: the javascript file main.js
   deactivate server
 
   Note right of browser: The browser starts executing the JavaScript code that fetches the JSON from the server
 
-  browser->>server: GET https://studies.cs.helsinki.fi/exampleapp/data.json
+  browser->>server: GET https://studies.cs.helsinki.fi/exampleapp/data.json/
   activate server
-  server-->>browser: [{ "content": "HTML is easy", "date": "2023-1-1" }, ... ]
+  server-->>browser: the json file data.json [{ "content": "test message", "date": "2025-7-7" }, ... ]
   deactivate server
 
   Note right of browser: The browser executes the callback function that renders the notes
