--- a/Part_0/0.5_Single_page_app_diagram.md
+++ b/Part_0/0.5_Single_page_app_diagram.md
@@ -25,5 +25,5 @@ sequenceDiagram
   server-->>browser: the json file data.json [{ "content": "test message", "date": "2025-7-7" }, ... ]
   deactivate server
 
-  Note right of browser: The browser executes the event handler that renders the notes
+  Note right of browser: The browser executes the callback that renders the notes
 ```
